syntax = "proto3";

package notification;

service NotificationService {
  // Service untuk mengirim email tiket
  rpc SendEmailTicket (SendEmailTicketRequest) returns (NotificationResponse);
}

message SendEmailTicketRequest {
  string to_email = 1;
  string customer_name = 2;
  string event_title = 3;
  string event_date = 4;
  string event_time = 5;
  string event_location = 6;
  string ticket_code = 7;
  int32 quantity = 8;
  double total_price = 9;
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
}